<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Start Splash Activity -->

    <string name="load">Loading...</string>
    <!-- End Splash Activity -->
    <string name="welcome">Welcome,</string>
    <string name="welcome_underline">to Amsterdam.</string>
    <!-- Start Main Activity -->

    <string name="app_name">AmsterGuide</string>
    <string name="action_exit">Exit</string>
    <string name="menu_title">Menu</string>
    <string name="title_activity_menu">Killer App</string>
    <string name="button_map">Open map</string>
    <string name="map">Dit is een map</string>
    <string name="map_button">Map</string>
    <string name="companion_button">Travel companions</string>
    <string name="settings_button">Settings</string>
    <string name="events_button">Events</string>
    <string name="places_button">Location</string>
    <string name="service_button">Services</string>
    <string name="logout_button">Sign out</string>
    <string name="category">Category</string>
    <string name="category_prompt">Choose a category</string>

    <string-array name="category_array">
        <item>Family</item>
        <item>Seniors</item>
        <item>Youth</item>
        <item>Low budget</item>
        <item>Romantic</item>
        <item>Cultural</item>
        <item>Party</item>
        <item>Active</item>
        <item>Backpacker</item>
        <item>Non-specific</item>
    </string-array>

    <!-- End Main Activity -->


    <!-- Start settings Activity -->

    <string name="settings">Settings</string>

    <!-- End Settings Activity -->


    <!-- Begin Map Activity -->
    <string name="action_settings">Map Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="action_filter">Filter</string>
    <string name="action_myposition">Go to my position</string>
    <string name="action_map_settings">Map Settings</string>
    <string name="action_help">Help</string>
    <string name="event_more_information">More information</string>
    <string name="categories_title">Pick a category</string>

    <string-array name="categories">
        <item>Art</item>
        <item>Music</item>
        <item>Nightlife</item>
    </string-array>

    <string name="OK">Ok</string>
    <string name="ok">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="settings_companions">Companions:</string>
    <string name="settings_events">Events:</string>
    <string name="settings_locations">Locations:</string>
    <string name="settings_guides">Guides:</string>
    <string name="action_sendmyposition">Send location to friends</string>

    <!-- End Map Activity -->
    <!-- Start Login -->
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_Guest">Guest (offline)</string>
    <string name="btn_register">Register</string>
    <string name="register_link">No AmsterGuide account yet? Register here</string>
    <!-- End Login -->


    <!-- Start Register -->
    <string name="name">Full name</string>
    <string name="email">Email</string>
    <string name="password_reg">Password</string>
    <string name="password_reg2">Repeat password</string>
    <string name="login_link">Already have an account? Login here</string>
    <!-- End Register -->


    <!-- Start MapActvity -->

    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>

    <!-- End MapActivity -->
    <!-- Start HelpActivity -->

    <string name="title_activity_help">Help...</string>
    <string name="help_activity">Help activity!</string>
    <string name="title_activity_event">EventActivity</string>

    <!-- End HelpActivity -->

    <string name="title_activity_friend">Travel companions</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_services_contact">Services</string>
    <string name="friend_delete">Delete</string>
    <!-- HTTPS Client -->
    <string name="store_pass">valkering</string>

    <!-- Start Search Activity -->
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_result">Search Result</string>
    <string name="search_hint_events">Search Events</string>
    <string name="search_hint_locations">Search Locations</string>
    <string name="search_hint">Search Locations or Events</string>
    <!-- End Search Activity -->


    <!-- Event List -->
    <string name="title_event_list">Events</string>
    <string name="title_activity_pre_login">PreLoginActivity</string>
    <string name="title_activity_friend_ship_requests">Friendship Requests</string>
    <string name="show_event">Show Event</string>
    <string name="addfriends">Add Friends</string>
    <string name="friendrequests">Friend Requests</string>

    <!-- Place List -->
    <string name="title_place_list">Locations</string>
    <string name="show_place">Show Location</string>
    <string name="title_activity_map_settings">Map Settings</string>
    <string name="title_activity_friend_pending">Pending Travel Accompanies</string>
    <string name="pendingfriends">Pending Friends</string>

</resources>