<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/menu_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_map_open"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="openMap"
            android:text="@string/map_button" />
        <Button
            android:id="@+id/btn_services_open"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_button"
            android:onClick="gotoServices" />
        <Button
            android:id="@+id/btn_event_list_open"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/events_button"
            android:onClick="openEventList" />
        <Button
            android:id="@+id/btn_place_list_open"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/places_button"
            android:onClick="openPlaceList" />
        <Button
            android:id="@+id/btn_settings_open"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_button" />
        
        <Button
            android:id="@+id/btn_logout_open"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="signOut"
            android:text="@string/logout_button" />

    </LinearLayout>
</RelativeLayout>