<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/prelogin_background_blur"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PreLoginActivity" >

    <!-- Email Label -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="left"
            android:text="@string/username"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/insertedUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:hint="@string/username"
            android:background="@drawable/rounded_edittext"
            android:padding="5dip"
            android:singleLine="true" />
        <!-- Password Label -->

        <TextView
            android:layout_width="fill_parent"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/insertedPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            android:padding="5dip"
            android:singleLine="true" />
        <!-- Login button -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/category"
            android:textColor="#ffffff" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/category_array"
            android:prompt="@string/category_prompt" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/btn_login"
            android:background="@drawable/rounded_inputtext_red"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_login_as_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Guest (offline)"
            android:padding="5dp"
            android:gravity="center_vertical|center_horizontal|left"
            android:textColor="@color/actionbar_separator"
            android:background="@drawable/rounded_inputtext_red"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_vertical|center_horizontal|right"
            android:text="Register"
            android:textColor="@color/actionbar_separator"
            android:background="@drawable/rounded_inputtext_red"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>