<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
      	android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:background="#ffffff">
 
        <!--  Header  Starts-->
        <LinearLayout 
           	android:id="@+id/header"
         	android:layout_width="fill_parent"
           	android:layout_height="wrap_content"
           	android:paddingTop="5dip"
           	android:paddingBottom="5dip">
        </LinearLayout>
        <!--  Header Ends -->
        <!-- Footer Start -->
        <LinearLayout 
        	android:id="@+id/footer"
           	android:layout_width="fill_parent"
          	android:layout_height="90dip"
          	android:layout_alignParentBottom="true">
        </LinearLayout>
        <!-- Footer Ends -->
 
        <!-- Login Form -->
        <LinearLayout
          	android:orientation="vertical"
          	android:layout_width="match_parent"
          	android:layout_height="wrap_content"
          	android:padding="10dip"
          	android:layout_below="@id/header">
          	<!--  Email Label -->
          	<TextView 
          	    android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/username"/>
          	<EditText
          	    android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
          		android:id="@+id/insertedUsername"/>
          	<!--  Password Label -->
          	<TextView 
              	android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/password"/>
          	<EditText 
          	    android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:password="true"
                android:id="@+id/insertedPassword"/>
          	<!-- Login button -->
          	<Button 
          	    android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/btn_login"/>
          	<!-- Link to Registration Screen -->
          	<TextView 
          	    android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:text="@string/register_link"
                android:gravity="center"
                android:textSize="20dip"
                android:textColor="#0b84aa"/>
        </LinearLayout>
        <!-- Login Form Ends -->
  </RelativeLayout>
</ScrollView>